# swift-winrt

./: .editorconfig  .gitignore  .gitmodules  AGENTS.md  CMakeLists.txt  CMakePresets.json  LICENSE  Package.swift  README.md  code_writers.h  component_writers.h  file_writers.h  generate-bindings.ps1  helpers.h  license  main.cpp  projections.json  settings.h  task_group.h  text_writer.h  type_helpers.h  type_writers.h
swiftwinrt/: CMakeLists.txt  abi_writer.h  attributes.h  code_writers.h  common.h  file_writers.h  helpers.h  main.cpp  metadata_cache.cpp  metadata_cache.h  metadata_filter.cpp  metadata_filter.h  pch.h  project_file_writers.h  resources.aps  resources.h  resources.rc  resources2.h  settings.h  text_writer.h  type_expression_writers.cpp  type_expression_writers.h  type_helpers.h  type_writers.h  types.cpp  types.h  versioning.h  write_type.cpp  write_type.h
swiftwinrt/Resources/CWinRT/: CWinRT.h  CppInteropWorkaround.h  GUID2.h  IVectorChangedEventArgs.h  MemoryBuffer.h  Package.swift  RestrictedErrorInfo.h  WeakReference.h  robuffer.h  shim.c
swiftwinrt/Resources/Support/: AbiHelper.swift  Aggregation.swift  Array+FromAbi.swift  Array+ToAbi.swift  Array+toVector.swift  COM+Extensions.swift  Collections.swift  ComObject.swift  ComPtr.swift  CppInteropWorkaround.swift  CustomQueryInterface.swift  Debugging.swift  Dictionary+toMap.swift  Error.swift  ErrorHandling.swift  Event.swift  FutureValue.swift  GUID.swift  GenericInterfaceRegistry.swift  HString.swift  HStringStorage.swift  IBufferByteAccess.swift  IID.swift  IInspectable+Swift.swift  IInspectable.swift  IMap+Swift.swift  IMap.swift  IMemoryBufferByteAccess.swift  IUnknown+Swift.swift  IUnknown.swift  IUnknownRef.swift  IVector+Swift.swift  IVector.swift  IWeakReference.swift  IWeakReferenceSource.swift  MakeFromAbi.swift  Marshaler.swift  PropertyValue+ABI.swift  PropertyValue+Swift.swift  PropertyValue.swift  (+11 more)
swiftwinrt/Resources2/CWinRT/: Package.swift
swiftwinrt/Resources2/Support/: Event.swift  IInspectable+Swift.swift  IUnknownRef.swift
swiftwinrt/Support/: Aggregation.swift  COM+Extensions.swift  Collections.swift  Debugging.swift  Error.swift  Event.swift  HString.swift  HStringStorage.swift  IInspectable+Swift.swift  IInspectable.swift  IUnknown.swift  IUnknownRef.swift  RawTyped.swift  Runtime+Swift.swift  StringHelpers.swift  Swift+Extensions.swift  TrustLevel+Swift.swift  WinRTWrapperBase.swift  WinSDK+Extensions.swift
swiftwinrt/code_writers/: can_write.h  class_writers.cpp  class_writers.h  common_writers.h  delegate_writers.cpp  delegate_writers.h  enum_writers.cpp  enum_writers.h  generic_writers.cpp  generic_writers.h  interface_writers.cpp  interface_writers.h  struct_writers.cpp  struct_writers.h  type_writers.cpp  type_writers.h  writer_helpers.h
swiftwinrt/file_writers/: abi_writer.h  cmake_project_file_writer.cpp  cmake_project_file_writer.h  file_writers.h  spm_project_file_writer.cpp  spm_project_file_writer.h
swiftwinrt/tasks/: write_code_files.cpp  write_code_files.h  write_project_files.cpp  write_project_files.h
swiftwinrt/types/: attributed_type.h  class_type.cpp  class_type.h  delegate_type.cpp  delegate_type.h  element_type.cpp  element_type.h  enum_type.cpp  enum_type.h  event_def.h  function_def.cpp  function_def.h  function_param.h  function_return_type.h  generic_inst.cpp  generic_inst.h  generic_type_parameter.h  interface_info.h  interface_type.cpp  interface_type.h  interface_writer_helpers.h  mapped_type.cpp  mapped_type.h  metadata_type.h  property_def.h  struct_member.h  struct_type.cpp  struct_type.h  system_type.cpp  system_type.h  type_constants.h  type_definition_helpers.h  type_traits.h  typedef_base.cpp  typedef_base.h
swiftwinrt/utility/: attributes.h  cmd_reader.h  metadata_cache.cpp  metadata_cache.h  metadata_filter.cpp  metadata_filter.h  metadata_helpers.cpp  metadata_helpers.h  separator.h  settings.h  swift_codegen_utils.cpp  swift_codegen_utils.h  text_writer.h  type_helpers.cpp  type_helpers.h  versioning.h
tests/: CMakeLists.txt  Package.swift
tests/swift_bindings/: CMakeLists.txt
tests/swift_bindings/Support/: COM+Extensions.swift  Error.swift  ErrorHandling.swift  GeneratedCodeDefinitions.swift  HString.swift  HStringStorage.swift  IInspectable+Swift.swift  IInspectable.swift  IUnknown+Swift.swift  IUnknown.swift  RawTyped.swift  Runtime+Swift.swift  StringHelpers.swift  Swift+Extensions.swift  TrustLevel+Swift.swift  WinSDK+Extensions.swift
tests/test_app/: AggregationTests.swift  AppDerived.swift  ArrayTests.swift  AsyncTests.swift  BindableTests.swift  BufferTests.swift  CMakeLists.txt  CollectionTests.swift  DoubleDelegate+QueryInterface.swift  DoubleDelegateVTable.swift  ErrorHandlingTests.swift  EventTests.swift  IdentityTests.swift  MemoryManagementTests.swift  StringTests.swift  ValueBoxingTests.swift  WeakReferenceTests.swift  WinRTInterfaceImplementations.swift  main.swift  test_app.exe.manifest
tests/test_app/Bindable/: BindableIterator.swift  BindableVector+VTable.swift  BindableVector.swift  BindableVectorView.swift
tests/test_app/BindableTests/: BindableTests.swift  BindableVector+VTable.swift  BindableVector.swift
tests/test_component/: CMakeLists.txt  Class.cpp  Class.h  Package.swift  Simple.h  StaticClass.cpp  StaticClass.h  module.cpp  pch.h  test_component.idl
tests/test_component/Sources/: CMakeLists.txt
tests/test_component/c/: CMakeLists.txt  CWinRT.h  Ctest_component.h  Windows.Foundation.h  module.modulemap  shim.c  test_component.Delegates.h  test_component.h
tests/test_component/cpp/: ArrayMethods.cpp  ArrayMethods.h  ArrayTester.idl  AsyncMethods.cpp  AsyncMethods.h  AsyncMethods.idl  AsyncOperationInt.cpp  AsyncOperationInt.h  Base.cpp  Base.h  BaseCollection.cpp  BaseCollection.h  BaseMapCollection.cpp  BaseMapCollection.h  BaseNoOverrides.cpp  BaseNoOverrides.h  BaseObservableCollection.cpp  BaseObservableCollection.h  Bindable.idl  BufferTester.cpp  BufferTester.h  BufferTests.idl  CMakeLists.txt  (+55 more)
tests/test_component_cwinrt/: CMakeLists.txt  CWinRT.h  module.modulemap  shim.c
(+1375 files in other folders)
